[build-system]
requires = [
	"setuptools>=61.0",
	"pybind11>=2.13.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "slices-tokenizer"
version = "0.1.0"
description = "A high-performance SLICES tokenizer written in C++."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
	{ name = "newbee1905", email = "beenewminh@outlook.com" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C++",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

# This project has no runtime Python dependencies
dependencies = []

[project.urls]
Homepage = "https://github.com/newbee1905/slices_tokenizer"
"Bug Tracker" = "https://github.com/newbee1905/slices_tokenizer/issues"
